--- a/package.json
+++ b/package.json
@@ -172,7 +172,7 @@
 		"format": "prettier --write .",
 		"format:check": "prettier --check .",
 		"semantic-release": "semantic-release",
-		"e2e": "wdio run e2e/wdio.local.conf.ts",
+		"e2e": "node e2e/run-e2e.js",
 		"e2e:bstack": "wdio run e2e/wdio.bstack.conf.ts"
 	},
 	"devDependencies": {
