--- a/package.json
+++ b/package.json
@@ -174,6 +174,7 @@
 		"@swc/core": "^1.3.27",
 		"@swc/jest": "^0.2.24",
 		"@types/jasmine": "^5.0.0",
+		"@types/jest": "^29.5.14",
 		"@wdio/browserstack-service": "^8.11.2",
 		"@wdio/cli": "^8.11.2",
 		"@wdio/globals": "^8.11.2",
