--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "peerjs",
+	"name": "linkt",
 	"version": "1.5.4",
 	"keywords": [
 		"peerjs",
@@ -17,77 +17,6 @@
 		"url": "https://github.com/peers/peerjs"
 	},
 	"license": "MIT",
-	"contributors": [
-		"Michelle Bu <michelle@michellebu.com>",
-		"afrokick <devbyru@gmail.com>",
-		"ericz <really.ez@gmail.com>",
-		"Jairo <kidandcat@gmail.com>",
-		"Jonas Gloning <34194370+jonasgloning@users.noreply.github.com>",
-		"Jairo Caro-Accino Viciana <jairo@galax.be>",
-		"Carlos Caballero <carlos.caballero.gonzalez@gmail.com>",
-		"hc <hheennrryy@gmail.com>",
-		"Muhammad Asif <capripio@gmail.com>",
-		"PrashoonB <prashoonbhattacharjee@gmail.com>",
-		"Harsh Bardhan Mishra <47351025+HarshCasper@users.noreply.github.com>",
-		"akotynski <aleksanderkotbury@gmail.com>",
-		"lmb <i@lmb.io>",
-		"Jairooo <jairocaro@msn.com>",
-		"Moritz Stückler <moritz.stueckler@gmail.com>",
-		"Simon <crydotsnakegithub@gmail.com>",
-		"Denis Lukov <denismassters@gmail.com>",
-		"Philipp Hancke <fippo@andyet.net>",
-		"Hans Oksendahl <hansoksendahl@gmail.com>",
-		"Jess <jessachandler@gmail.com>",
-		"khankuan <khankuan@gmail.com>",
-		"DUODVK <kurmanov.work@gmail.com>",
-		"XiZhao <kwang1imsa@gmail.com>",
-		"Matthias Lohr <matthias@lohr.me>",
-		"=frank tree <=frnktrb@googlemail.com>",
-		"Andre Eckardt <aeckardt@outlook.com>",
-		"Chris Cowan <agentme49@gmail.com>",
-		"Alex Chuev <alex@chuev.com>",
-		"alxnull <alxnull@e.mail.de>",
-		"Yemel Jardi <angel.jardi@gmail.com>",
-		"Ben Parnell <benjaminparnell.94@gmail.com>",
-		"Benny Lichtner <bennlich@gmail.com>",
-		"fresheneesz <bitetrudpublic@gmail.com>",
-		"bob.barstead@exaptive.com <bob.barstead@exaptive.com>",
-		"chandika <chandika@gmail.com>",
-		"emersion <contact@emersion.fr>",
-		"Christopher Van <cvan@users.noreply.github.com>",
-		"eddieherm <edhermoso@gmail.com>",
-		"Eduardo Pinho <enet4mikeenet@gmail.com>",
-		"Evandro Zanatta <ezanatta@tray.net.br>",
-		"Gardner Bickford <gardner@users.noreply.github.com>",
-		"Gian Luca <gianluca.cecchi@cynny.com>",
-		"PatrickJS <github@gdi2290.com>",
-		"jonnyf <github@jonathanfoss.co.uk>",
-		"Hizkia Felix <hizkifw@gmail.com>",
-		"Hristo Oskov <hristo.oskov@gmail.com>",
-		"Isaac Madwed <i.madwed@gmail.com>",
-		"Ilya Konanykhin <ilya.konanykhin@gmail.com>",
-		"jasonbarry <jasbarry@me.com>",
-		"Jonathan Burke <jonathan.burke.1311@googlemail.com>",
-		"Josh Hamit <josh.hamit@gmail.com>",
-		"Jordan Austin <jrax86@gmail.com>",
-		"Joel Wetzell <jwetzell@yahoo.com>",
-		"xizhao <kevin.wang@cloudera.com>",
-		"Alberto Torres <kungfoobar@gmail.com>",
-		"Jonathan Mayol <mayoljonathan@gmail.com>",
-		"Jefferson Felix <me@jsfelix.dev>",
-		"Rolf Erik Lekang <me@rolflekang.com>",
-		"Kevin Mai-Husan Chia <mhchia@users.noreply.github.com>",
-		"Pepijn de Vos <pepijndevos@gmail.com>",
-		"JooYoung <qkdlql@naver.com>",
-		"Tobias Speicher <rootcommander@gmail.com>",
-		"Steve Blaurock <sblaurock@gmail.com>",
-		"Kyrylo Shegeda <shegeda@ualberta.ca>",
-		"Diwank Singh Tomer <singh@diwank.name>",
-		"Sören Balko <Soeren.Balko@gmail.com>",
-		"Arpit Solanki <solankiarpit1997@gmail.com>",
-		"Yuki Ito <yuki@gnnk.net>",
-		"Artur Zayats <zag2art@gmail.com>"
-	],
 	"funding": {
 		"type": "opencollective",
 		"url": "https://opencollective.com/peer"
@@ -105,8 +34,8 @@
 	],
 	"main": "dist/bundler.cjs",
 	"module": "dist/bundler.mjs",
-	"browser-minified": "dist/peerjs.min.js",
-	"browser-unminified": "dist/peerjs.js",
+	"browser-minified": "dist/linkt.min.js",
+	"browser-unminified": "dist/linkt.js",
 	"types": "dist/types.d.ts",
 	"engines": {
 		"node": ">= 14"
@@ -161,7 +90,7 @@
 		"format": "prettier --write .",
 		"format:check": "prettier --check .",
 		"semantic-release": "semantic-release",
-		"e2e": "node e2e/run-e2e.js",
+		"e2e": "npm run build && node e2e/run-e2e.js",
 		"e2e:bstack": "wdio run e2e/wdio.bstack.conf.ts"
 	},
 	"devDependencies": {
