--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,39 @@
 {
 	"compilerOptions": {
-		"target": "es5",
-		"module": "commonjs",
-		"downlevelIteration": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
-		"skipLibCheck": true,
-		"isolatedModules": true,
-		"resolveJsonModule": true,
-		"lib": ["es2020", "dom"],
-		"paths": {
-			"cbor-x/index-no-eval": ["./node_modules/cbor-x"]
-		}
+		/* Basic Options */
+		"target": "ES2018" /* Good balance for modern browsers */,
+		"module": "esnext" /* Suitable for bundlers like Webpack or Rollup */,
+		"lib": ["dom", "es2018"] /* Standard library files for web development */,
+		"declaration": true /* Generates corresponding '.d.ts' file */,
+		"declarationMap": true /* Generates a sourcemap for each corresponding '.d.ts' file */,
+		"sourceMap": true /* Generates corresponding '.map' file */,
+		"outDir": "lib" /* Redirect output structure to the directory */,
+
+		/* Strict Type-Checking Options */
+		"strict": true /* Enable all strict type-checking options */,
+		"noImplicitAny": true /* Raise error on expressions and declarations with an implied 'any' type */,
+		"strictNullChecks": true /* Enable strict null checks */,
+		"strictFunctionTypes": true /* Enable strict checking of function types */,
+		"strictBindCallApply": true /* Enable strict 'bind', 'call', and 'apply' methods on functions */,
+		"strictPropertyInitialization": true /* Enable strict checking of property initialization in classes */,
+		"noImplicitThis": true /* Raise error on 'this' expressions with an implied 'any' type */,
+		"alwaysStrict": true /* Parse in strict mode and emit "use strict" for each source file */,
+
+		/* Additional Checks */
+		"noUnusedLocals": true /* Report errors on unused locals */,
+		"noUnusedParameters": true /* Report errors on unused parameters */,
+		"noImplicitReturns": true /* Report error when not all code paths in function return a value */,
+		"noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement */,
+
+		/* Module Resolution Options */
+		"moduleResolution": "node" /* Specify module resolution strategy */,
+		"esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules */,
+		"experimentalDecorators": true /* Enables experimental support for ES7 decorators */,
+		"emitDecoratorMetadata": true /* Enables experimental support for emitting type metadata for decorators */,
+
+		/* Advanced Options */
+		"skipLibCheck": true /* Skip type checking of declaration files */,
+		"forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file */
 	},
-	"exclude": ["node_modules", "dist", "e2e"]
+	"include": ["src", "__tests__/*.ts"]
 }
