--- a/package.json
+++ b/package.json
@@ -40,67 +40,27 @@
 	"engines": {
 		"node": ">= 14"
 	},
-	"targets": {
-		"types": {
-			"source": "src/index.ts"
-		},
-		"main": {
-			"source": "src/index.ts",
-			"sourceMap": {
-				"inlineSources": true
-			}
-		},
-		"module": {
-			"source": "src/index.ts",
-			"includeNodeModules": [
-				"eventemitter3"
-			],
-			"sourceMap": {
-				"inlineSources": true
-			}
-		},
-		"browser-minified": {
-			"context": "browser",
-			"outputFormat": "global",
-			"optimize": true,
-			"engines": {
-				"browsers": "chrome >= 83, edge >= 83, firefox >= 80, safari >= 15"
-			},
-			"source": "src/global.ts"
-		},
-		"browser-unminified": {
-			"context": "browser",
-			"outputFormat": "global",
-			"optimize": false,
-			"engines": {
-				"browsers": "chrome >= 83, edge >= 83, firefox >= 80, safari >= 15"
-			},
-			"source": "src/global.ts"
-		}
-	},
 	"scripts": {
 		"generate:version": "node scripts/generate-version.js",
 		"prebuild": "npm run generate:version",
-		"check": "tsc --noEmit && tsc -p e2e/tsconfig.json --noEmit",
-		"watch": "parcel watch",
-		"build": "rm -rf dist && parcel build",
+		"clean": "rimraf ./lib ./build",
+		"build:ts": "tsc",
+		"build:rollup": "rollup -c",
+		"build": "npm run clean && npm run build:ts && npm run build:rollup",
+		"typecheck": "tsc --noEmit",
 		"prepublishOnly": "npm run build",
 		"test": "jest",
 		"test:watch": "jest --watch",
 		"coverage": "jest --coverage --collectCoverageFrom=\"./src/**\"",
 		"format": "prettier --write .",
 		"format:check": "prettier --check .",
-		"semantic-release": "semantic-release",
 		"e2e": "npm run build && node e2e/run-e2e.js",
 		"e2e:bstack": "wdio run e2e/wdio.bstack.conf.ts"
 	},
 	"devDependencies": {
-		"@parcel/config-default": "^2.9.3",
-		"@parcel/packager-ts": "^2.9.3",
-		"@parcel/transformer-typescript-tsc": "^2.9.3",
-		"@parcel/transformer-typescript-types": "^2.9.3",
-		"@semantic-release/changelog": "^6.0.1",
-		"@semantic-release/git": "^10.0.1",
+		"@rollup/plugin-commonjs": "^28.0.3",
+		"@rollup/plugin-node-resolve": "^16.0.1",
+		"@rollup/plugin-terser": "^0.4.4",
 		"@swc/core": "^1.3.27",
 		"@swc/jest": "^0.2.24",
 		"@types/jasmine": "^5.0.0",
@@ -116,9 +76,8 @@
 		"jest": "^29.3.1",
 		"jest-environment-jsdom": "^29.3.1",
 		"mock-socket": "^9.0.0",
-		"parcel": "^2.9.3",
 		"prettier": "^3.0.0",
-		"semantic-release": "^23.0.0",
+		"rollup": "^4.41.1",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.0.0",
 		"wdio-geckodriver-service": "^5.0.1"
